@@ -17,6 +17,7 @@ version ?.??.?? (????-??-??):
   - daemon: if snmp.h is not available then don't build ewx-* modules [maniac]
   - daemon: fixed daemon start on some platforms. Closes: #239 [maniac]
   - tariffs: 500M is new maximum allowed bandwidth [chilan]
+  - invoicereport: multi selection of numberplans is possible [chilan]
 
 version 1.11.15 (2014-05-15):
 
